# Gamebuddy

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
demo/: README.md  _build_states.py  _format_mock.py  _render_artifacts.py  index.html  resume-late-masked.txt  resume-late-reveal.txt  sl2_discovery.md  synthesis-late-mock.json
demo/envelopes/: sekiro-early.txt  sekiro-late-body.txt  sekiro-late.txt  sekiro-mid.txt
demo/journals/: sekiro-early-masked.html  sekiro-late-masked.html  sekiro-late-reveal.html  sekiro-mid-masked.html
demo/states/: sekiro-early.json  sekiro-late.json  sekiro-mid.json
gamebuddy/: __init__.py  cli.py  context.py  envelope.py  filter.py  journal.py  onboard.py  paths.py  schemas.py  store.py  synthesis.py  visualize.py
gamebuddy/providers/: __init__.py  manual.py  sekiro.py
gamebuddy/saves/: __init__.py  bnd4.py  crypto.py  sekiro_slot.py
games/sekiro/: meta.md  progression.yaml
games/sekiro/entities/areas/: abandoned_dungeon.md  ashina_castle.md  ashina_depths.md  ashina_outskirts.md  ashina_reservoir_revisited.md  fountainhead_palace.md  gun_fort.md  hirata_estate.md  hirata_estate_revisited.md  mibu_village.md  senpou_temple.md  sunken_valley.md
games/sekiro/entities/bosses/: armored_warrior.md  blazing_bull.md  chained_ogre.md  corrupted_monk.md  demon_of_hatred.md  divine_dragon.md  (+17 more)
tests/: test_cli.py  test_envelope.py  test_journal.py  test_manual.py  test_onboard.py  test_saves.py  test_schemas.py  test_sekiro_corpus.py  test_store.py  test_synthesis.py  test_visualize.py
(+22 files in other folders)
