[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamebuddy"
version = "0.1.0"
description = "Spoiler-safe session recall for singleplayer games."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Briggasonic" }]
dependencies = ["PyYAML>=6", "click>=8"]

[project.scripts]
gamebuddy = "gamebuddy.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["gamebuddy*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
